Install protractor, webdriver-manager on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env: BROWSERS=firefox E2E_BROWSERS=Firefox
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
-  - npm install -g bower
+  - npm install -g bower protractor
 
 before_script:
   - export DISPLAY=:99.0
