Fix GCC version for Node.js 5 on travis
Node.js 5 needs a C++11-compatible GCC.
Install g++-4.8 on travis, cf.
https://github.com/travis-ci/travis-ci/issues/1379

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 node_js:
-  - "0.12"
+  - "5"
 
 env: BROWSERS=firefox E2E_BROWSERS=Firefox
 
 before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
-  - sudo apt-get install -y libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
+  - sudo apt-get install -y libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++-4.8
   - npm install -g bower protractor
 
 before_script:
