--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm run update-webdriver
+  - nohup bash -c "gulp connect 2>&1 &"
+  - nohup bash -c "webdriver-manager start 2>&1 &"
 
 script:
-  - gulp connect &
-  - webdriver-manager start &
   - npm run protractor
