Get e2e screenshots from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,4 @@ script:
   - npm run protractor
 
 after_script:
-  - cat /tmp/2015-10-16_1.png | base64 | curl -F 'sprunge=<-' http://sprunge.us
-  - cat /tmp/2015-10-16_2.png | base64 | curl -F 'sprunge=<-' http://sprunge.us
+  - bash -c 'for f in /tmp/*.png ; do cat "$f" | base64 | curl -F \'sprunge=<-\' http://sprunge.us ; done'
