Update cytpscape release

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.2",
-    "cytoscape": "http://js.cytoscape.org/download/cytoscape.js-snapshot-e9ba43d326-1458149978215.zip",
+    "cytoscape": "^2.6.7",
     "spin.js": "^2.3.2",
     "bootstrap": "^3.3.6",
     "font-awesome": "fontawesome#^4.5.0"
